This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: test_fileio error (windows)
Type: behavior Stage:
Components: Windows Versions: Python 2.7, Python 2.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: benjamin.peterson, ocean-city
Priority: normal Keywords: patch

Created on 2009-01-01 05:06 by ocean-city, last changed 2022-04-11 14:56 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
fix_test_fileio_error.patch ocean-city, 2009-01-01 05:06
Messages (3)
msg78690 - (view) Author: Hirokazu Yamamoto (ocean-city) * (Python committer) Date: 2009-01-01 05:06
This patch fixes this error.

http://www.python.org/dev/buildbot/trunk.stable/x86%20XP-4%
20trunk/builds/1727/step-test/0

======================================================================
FAIL: testOpendir (test.test_fileio.AutoFileTests)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "E:\cygwin\home\db3l\buildarea\trunk.bolen-
windows\build\lib\test\test_fileio.py", line 112, in testOpendir
    self.assertEqual(e.filename, ".")
AssertionError: None != '.'

This error doesn't occur on py3k (because wide string is passed) but I 
think It's better to merge the patch into py3k too.
msg78712 - (view) Author: Benjamin Peterson (benjamin.peterson) * (Python committer) Date: 2009-01-01 15:01
Please go ahead.
msg78714 - (view) Author: Hirokazu Yamamoto (ocean-city) * (Python committer) Date: 2009-01-01 16:04
Done. Fixed in r68134(trunk) and r68139(py3k).
History
Date User Action Args
2022-04-11 14:56:43adminsetgithub: 49047
2009-01-01 16:04:36ocean-citysetstatus: open -> closed
resolution: fixed
messages: + msg78714
2009-01-01 15:01:59benjamin.petersonsetnosy: + benjamin.peterson
messages: + msg78712
2009-01-01 05:06:10ocean-citycreate