Issue #4797: IOError.filename was not set when _fileio.FileIO failed to open file with `str' filename on Windows.